<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_lutemons_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lutemon_name"
        android:layout_weight="1"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release" />

    <Button
        android:id="@+id/btn_move_to_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_to_storage" />
</LinearLayout>
